# library

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  library.cbp
include/: book.h  datsource.h  menu.hpp  model.h  operator.hpp  reader.h
include/model/: book.hpp  dat_source.hpp  reader.hpp  sqlite.hpp
src/: book.cc  datasource.cc  main.cc  menu.cc  operator.cc  pow.cc  pow.h  sqlite.cc
tests/: test.cc
